cmake_minimum_required(VERSION 3.23)
project(Program2223)

set(CMAKE_CXX_STANDARD 14)

add_executable(c299 zero-judge/cp/c299.cpp)
add_executable(c455 zero-judge/cp/c455.cpp)
add_executable(konig algorithms/konig.c)
add_executable(i428 zero-judge/apcs/i428.cpp)
add_executable(j123 zero-judge/apcs/j123.cpp)
add_executable(j124 zero-judge/apcs/j124.cpp)
add_executable(j125 zero-judge/apcs/j125.cpp)