cmake_minimum_required(VERSION 3.23)
project(Program2223)

set(CMAKE_CXX_STANDARD 14)

add_executable(cp-book algorithms/cp-book.c)
add_executable(largestGap club/largestGap.cpp)
add_executable(snake club/snake.cpp)
add_executable(b558 zero-judge/b558.cpp)
add_executable(a004 zero-judge/a004.cpp)
add_executable(a005 zero-judge/a005.cpp)
add_executable(a147 zero-judge/a147.cpp)
add_executable(a024 zero-judge/a024.cpp)